--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<div class="text-inner">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
-							<h1 class="to-animate">shinyML</h1>
+							<h1 class="to-animate">shiny<font color="#FFA500">ML</font></h1>
 							<h2 class="to-animate"> An intuitive platform to compare supervised regression models</h2>
 						</div>
 					</div>
