--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 					<div class="col-md-12 section-heading text-center">
 						<h2 class="to-animate">The product</h2>
 						<div class="row">
+							<h3 class="to-animate">Test different machine learning techiques and hyper-parameters configurations with just a few clicks!</h3>
 							<div class="col-md-8 col-md-offset-2 subtext">
 								
 							</div>
