--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				</div>
 				<div class="row">
 					<div class="core-features">
-						<div class="grid2 to-animate" style="background-image: url(images/full_image_2.jpg);">
+						<div class="grid2 to-animate" style="background-image: url(shinyML.png);">
 						</div>
 						<div class="grid2">
 							<div class="core-f">
