--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 section-heading text-center">
-						<h2 class="to-animate"><font color="#FFA500">The product</font></h2>
+						<h2 class="to-animate">The product</h2>
 						<div class="row">
 							<h3 class="to-animate">Test different machine learning techiques and hyper-parameters configurations with just a few clicks!</h3>
 							<div class="col-md-8 col-md-offset-2 subtext">
@@ -112,7 +112,7 @@
 				</div>
 				<div class="row">
 					<div class="core-features">
-						<div class="grid2 to-animate" style="background-image: url(shinyML.png);">
+						
 						</div>
 						<div class="grid2">
 							<div class="core-f">
@@ -121,29 +121,30 @@
 										<div class="core">
 											<i class="icon-cloud-download to-animate-2"></i>
 											<div class="fh5co-post to-animate">
-												<h3>Free Download</h3>
-												<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-											</div>
-										</div>
-										<div class="core">
-											<i class="icon-laptop to-animate-2"></i>
-											<div class="fh5co-post to-animate">
-												<h3>Responsive Layout</h3>
-												<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+												<h3>ADAPT</h3>
+												<p>Upload your dataset directly on Rstudio to compare and suit models on your own regression task</p>
 											</div>
 										</div>
 										<div class="core">
 											<i class="icon-gear to-animate-2"></i>
 											<div class="fh5co-post to-animate">
-												<h3>24/7 Help &amp; Support</h3>
-												<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+												<h3>IMPLEMENT</h3>
+												<p>Implement and compare different machine learning regression techniques  using just one line of code</p>
 											</div>
 										</div>
 										<div class="core">
+											<i class="icon-laptop to-animate-2"></i>
+											<div class="fh5co-post to-animate">
+												<h3>SCALE</h3>
+												<p>Whether you are on Windows, Linux or Mac distribution, you can install shinyML package for free from any device using Rstudio IDE.</p>
+											</div>
+										</div>
+			
+										<div class="core">
 											<i class="icon-columns to-animate-2"></i>
 											<div class="fh5co-post to-animate">
-												<h3>Lots of Elements</h3>
-												<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+												<h3>DEPLOY</h3>
+												<p>Easily deploy and share your forecast web app inside your local area network </p>
 											</div>
 										</div>
 									</div>
@@ -153,26 +154,6 @@
 					</div>
 				</div>
 				<div id="fh5co-counter-section" class="fh5co-counters">
-					<div class="container">
-						<div class="row to-animate">
-							<div class="col-md-3 text-center">
-								<span class="fh5co-counter js-counter" data-from="0" data-to="3452" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Cups of Coffee</span>
-							</div>
-							<div class="col-md-3 text-center">
-								<span class="fh5co-counter js-counter" data-from="0" data-to="234" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Client</span>
-							</div>
-							<div class="col-md-3 text-center">
-								<span class="fh5co-counter js-counter" data-from="0" data-to="6542" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Projects</span>
-							</div>
-							<div class="col-md-3 text-center">
-								<span class="fh5co-counter js-counter" data-from="0" data-to="8687" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Finished Projects</span>
-							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
