--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
-							<div class="user"><img class="img-reponsive" src="images/user-1.jpg" alt="Roger Garfield"></div>
+							<div class="user"><img class="img-reponsive" src="images/profile_pict.png" alt="Roger Garfield"></div>
 							<h3>Jean BERTIN</h3>
 							<span class="position">Data Scientist</span>
 							<p>Particularly interested in machine learning regression techniques on time series.Graduated from Arts et Métiers ParisTech (2016) and Mines ParisTech (OSE 2017). </p>
