--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						<div class="grid2">
 							<div class="core-f">
 								<div class="row">
-									<div class="col-md-12">
+									<div class="col-md-12 section-heading text-center">
 										<div class="core">
 											<i class="icon-cloud-download to-animate-2"></i>
 											<div class="fh5co-post to-animate">
