--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 											<i class="icon-cloud-download to-animate-2"></i>
 											<div class="fh5co-post to-animate">
 												<h3>ADAPT</h3>
-												<p>Upload your dataset directly on Rstudio to compare and suit models on your own regression task</p>
+												Upload your dataset directly on Rstudio to compare and suit models on your own regression task
 											</div>
 										</div>
 										<div class="core">
