--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 section-heading text-center">
-						<h2 class="to-animate">Our Staff</h2>
+						<h2 class="to-animate">GET IN TOUCH</h2>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove. </h3>
+								<h3 class="to-animate">Please don't hesitate to contact me at jean.bertin@mines-paris.org</h3>
 							</div>
 						</div>
 					</div>
