--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 	</section>	
 
 	<section id="fh5co-team" data-section="team">
-		<div class="fh5co-team">
+		<div class="fh5co-team section-heading text-center">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 section-heading text-center">
