--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<center>
+					<div class="center">
 						<div class="col-md-4">
 							<div class="team-box text-center to-animate-2">
 								<div class="user"><img class="img-reponsive" src="images/profile_pict.png" alt="Jean BERTIN"></div>
@@ -277,7 +277,7 @@
 								</ul>
 							</div>
 						</div>
-					</center>
+					</div>
 
 
 				</div>
