--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="center">
 					<div class="center">
 						<div class="col-md-4">
 							<div class="team-box text-center to-animate-2">
