--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 				</div>
 				<div class="center">
 					<div class="center">
-						<div class="col-md-4">
+						<div class="col-md-4 section-heading text-center">
 							<div class="team-box text-center to-animate-2">
 								<div class="user"><img class="img-reponsive" src="images/profile_pict.png" alt="Jean BERTIN"></div>
 								<h3>Jean BERTIN</h3>
