--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
 						<div class="grid2">
 							<div class="core-f">
 								<div class="row">
-									<div class="col-md-12 section-heading text-center">
+									<div class="col-md-6 section-heading text-center">
+										<a href="https://www.youtube.com/watch?v=H64zJqmzrMs"></a>
+									</div>
+									<div class="col-md-6 section-heading text-center">
 										<div class="core">
 											<i class="icon-cloud-download to-animate-2"></i>
 											<div class="fh5co-post to-animate">
