--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
 							<div class="core-f">
 								<div class="row">
 									<div class="col-md-6 section-heading text-center">
-										<iframe> width="560" height="320" src="https://www.youtube.com/watch?v=9YffrCViTVk" frameborder="0" allow="autoplay;encrypted-media" allowfullscreen></iframe>
+										<iframe width="560" height="315" 
+											src="https://www.youtube.com/embed/H64zJqmzrMs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+										</iframe>
 									</div>	
 									<div class="col-md-6 section-heading text-center">
 										<div class="core">
