--- a/index.html
+++ b/index.html
@@ -103,11 +103,16 @@
 						<div class="grid2">
 							<div class="core-f">
 								<div class="row">
+                                                                  <div class="column">
+
 									<div class="col-md-6 section-heading text-center">
 										<iframe width="560" height="315" 
 											src="https://www.youtube.com/embed/H64zJqmzrMs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 										</iframe>
 									</div>	
+
+                                                                  </div>
+                                                                  <div class="column">
 									<div class="col-md-6 section-heading text-center">
 										<div class="core">
 											<i class="icon-cloud-download to-animate-2"></i>
@@ -139,6 +144,7 @@
 											</div>
 										</div>
 									</div>
+                                                                   </div>
 								</div>
 							</div>
 						</div>
