--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
 	<div id="fh5co-footer" role="contentinfo">
 		<div class="container">
-				<div class="col-md-4 to-animate">
+				<div class="block center">
 					<h3 class="section-title">Drop me a line</h3>
 					<form class="contact-form">
 						<div class="form-group">
