--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 				</div>
 				<div class="center">
 					<div class="center">
-						<div class="col-md-4 section-heading text-center">
+						<div class="section-heading text-center">
 							<div class="team-box text-center to-animate-2">
 								<div class="user"><img class="img-reponsive" src="images/profile_pict.png" width="10" height="300" alt="Jean BERTIN"></div>
 								<h3>Jean BERTIN</h3>
