--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 	<div id="fh5co-footer" role="contentinfo">
 		<div class="container">
 				<div class="block center">
-					<h3 class="section-title">Drop me a line</h3>
+					<h3 class="block center">Drop me a line</h3>
 					<form class="contact-form">
 						<div class="form-group">
 							<label for="name" class="sr-only">Name</label>
