--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 					</div>
 				</div>
 				<div class="row">
-                                	<div class="column">
+                                	<div class="col-md-6 col-sm-6">
 						<iframe width="560" height="315" 
 						src="https://www.youtube.com/embed/H64zJqmzrMs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 						</iframe>
 					</div>	
-                                        <div class="column">
+                                        <div class="col-md-6 col-sm-6">
 						<div class="core">
 							<i class="icon-cloud-download to-animate-2"></i>
 								<div class="fh5co-post to-animate">
