--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					</div>	
                                         <div class="col-md-6 col-sm-6">
 						<div class="core">
-							<i class="icon-cloud-download to-animate-2"></i>
+							<i class="section-heading text-center icon-cloud-download to-animate-2"></i>
 								<div class="fh5co-post to-animate">
 									<h3>ADAPT</h3>
 										Upload your dataset directly on Rstudio to compare and suit models on your own regression task
