--- a/index.html
+++ b/index.html
@@ -97,33 +97,33 @@
 				<div class="row">
                                 	<div class="col-md-6 col-sm-6">
 						<iframe width="750" height="420" 
-						src="https://www.youtube.com/embed/H64zJqmzrMs" frameborder="30" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+						src="https://www.youtube.com/embed/H64zJqmzrMs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 						</iframe>
 					</div>	
                                         <div class="col-md-6 col-sm-6">
 						<div class="core">
 							<i class="section-heading text-center icon-cloud-download to-animate-2"></i>
 								<div class="fh5co-post to-animate">
-									<h3>ADAPT</h3>
+									<h3><i class="section-heading text-center">ADAPT</i></h3>
 										Upload your dataset directly on Rstudio to compare and suit models on your own regression task
 								</div>
 						</div>
 						<div class="core">
-							<i class="icon-gear to-animate-2"></i>
+							<i class="section-heading text-center icon-gear to-animate-2"></i>
 								<div class="fh5co-post to-animate">
 									<h3>IMPLEMENT</h3>
 									Implement and compare different machine learning regression techniques  using just one line of code
 								</div>
 						</div>
 						<div class="core">
-							<i class="icon-laptop to-animate-2"></i>
+							<i class="section-heading text-center icon-laptop to-animate-2"></i>
 								<div class="fh5co-post to-animate">
 									<h3>SCALE</h3>
 									Whether you are on Windows, Linux or Mac distribution, you can install shinyML package for free from any device using Rstudio IDE.
 								</div>
 						</div>
 						<div class="core">
-							<i class="icon-columns to-animate-2"></i>
+							<i class="section-heading text-center icon-columns to-animate-2"></i>
 								<div class="fh5co-post to-animate">
 									<h3>DEPLOY</h3>
 									Easily deploy and share your forecast web app inside your local area network 
