--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<div class="row">
                                 	<div class="col-md-6 col-sm-6">
 						<iframe width="560" height="315" 
-						src="https://www.youtube.com/watch?v=_ekZcy84H0o&feature=youtu.be" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+						src="https://youtu.be/_ekZcy84H0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 						</iframe>
 					</div>	
                                         <div class="col-md-6 col-sm-6">
