--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h1 class="to-animate">shiny<font color="#FFA500">ML</font></h1>
 							<h2 class="to-animate"> An intuitive platform to compare supervised regression models</h2>
-						<p></a> <a href="https://www.gnu.org/licenses/gpl-3.0"><img src="https://img.shields.io/badge/License-GPL%20v3-orange.svg" alt="License: GPL v3"></a> <a href="https://cran.r-project.org/package=shinyML"><img src="http://www.r-pkg.org/badges/version/shinyML?color=orange" alt="CRAN_Status_Badge"></a><a href="http://cran.rstudio.com/web/packages/shinyML/index.html"><img src="http://cranlogs.r-pkg.org/badges/shinyML?color=orange" alt="downloads"></a></p>
-						<br>
-					        <p><a href="https://travis-ci.org/JeanBertinR/shinyML"><img src="https://travis-ci.org/JeanBertinR/shinyML.svg?branch=master" alt="Linux/OSX Build Status"></a> <a href="https://ci.appveyor.com/project/JeanBertinR/shinyML/branch/develop"><img src="https://ci.appveyor.com/api/projects/status/6g6kp8onpb26jhnm/branch/develop?svg=true" alt="Windows Build status"></a></p>
+						<p></a> <a href="https://www.gnu.org/licenses/gpl-3.0"><img src="https://img.shields.io/badge/License-GPL%20v3-lightgreen.svg" alt="License: GPL v3"></a> <a href="https://cran.r-project.org/package=shinyML"><img src="http://www.r-pkg.org/badges/version/shinyML" alt="CRAN_Status_Badge"></a><a href="http://cran.rstudio.com/web/packages/shinyML/index.html"><img src="http://cranlogs.r-pkg.org/badges/shinyML" alt="downloads"></a></p>
+						<p><a href="https://travis-ci.org/JeanBertinR/shinyML"><img src="https://travis-ci.org/JeanBertinR/shinyML.svg?branch=master" alt="Linux/OSX Build Status"></a> <a href="https://ci.appveyor.com/project/JeanBertinR/shinyML/branch/develop"><img src="https://ci.appveyor.com/api/projects/status/6g6kp8onpb26jhnm/branch/develop?svg=true" alt="Windows Build status"></a></p>
 				</div>
 					</div>
 				</div>
