--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				</div>
 				<div class="row">
                                 	<div class="col-md-6 col-sm-6">
-						<iframe width="560" height="315" src="http://www.youtube.com/watch?v=_ekZcy84H0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""/>
+						<iframe width="560" height="315" src="http://www.youtube.com/watch?v=_ekZcy84H0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 						
 					</div>	
                                         <div class="col-md-6 col-sm-6">
