--- a/index.html
+++ b/index.html
@@ -112,21 +112,21 @@
 						<div class="core">
 							<i class="section-heading text-center icon-gear to-animate-2"></i>
 								<div class="fh5co-post to-animate">
-									<h3>IMPLEMENT</h3>
+									<h3><i class="section-heading text-center">IMPLEMENT</i></h3>
 									Implement and compare different machine learning regression techniques  using just one line of code
 								</div>
 						</div>
 						<div class="core">
 							<i class="section-heading text-center icon-laptop to-animate-2"></i>
 								<div class="fh5co-post to-animate">
-									<h3>SCALE</h3>
+									<h3><i class="section-heading text-center">SCALE</i></h3>
 									Whether you are on Windows, Linux or Mac distribution, you can install shinyML package for free from any device using Rstudio IDE.
 								</div>
 						</div>
 						<div class="core">
 							<i class="section-heading text-center icon-columns to-animate-2"></i>
 								<div class="fh5co-post to-animate">
-									<h3>DEPLOY</h3>
+									<h3><i class="section-heading text-center">DEPLOY</i></h3>
 									Easily deploy and share your forecast web app inside your local area network 
 								</div>
 	
