--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					</div>
 				</div>
                                         
-						<div class="core">
+						<div class="col-md-12 section-heading text-center">
 							<i class="section-heading text-center icon-cloud-download to-animate-2"></i>
 								<div class="fh5co-post to-animate">
 									<h3><i class="section-heading text-center">ADAPT</i></h3>
