--- a/index.html
+++ b/index.html
@@ -104,25 +104,25 @@
 									<h4 class="to-animate">Upload your dataset directly on Rstudio to compare and suit models on your own regression task</h4>
 								</div>
 						</div>
-						<div class="core">
+						<div class="col-md-12 section-heading text-center">
 							<i class="section-heading text-center icon-gear to-animate-2"></i>
 								<div class="fh5co-post to-animate">
 									<h3><i class="section-heading text-center">IMPLEMENT</i></h3>
-									Implement and compare different machine learning regression techniques  using just one line of code
+									<h4 class="to-animate">Implement and compare different machine learning regression techniques  using just one line of code</h4>
 								</div>
 						</div>
-						<div class="core">
+						<div class="col-md-12 section-heading text-center">
 							<i class="section-heading text-center icon-laptop to-animate-2"></i>
 								<div class="fh5co-post to-animate">
 									<h3><i class="section-heading text-center">SCALE</i></h3>
-									Whether you are on Windows, Linux or Mac distribution, you can install shinyML package for free from any device using Rstudio IDE.
+									<h4 class="to-animate">Whether you are on Windows, Linux or Mac distribution, you can install shinyML package for free from any device using Rstudio IDE</h4>
 								</div>
 						</div>
-						<div class="core">
+						<div class="col-md-12 section-heading text-center">
 							<i class="section-heading text-center icon-columns to-animate-2"></i>
 								<div class="fh5co-post to-animate">
 									<h3><i class="section-heading text-center">DEPLOY</i></h3>
-									Easily deploy and share your forecast web app inside your local area network 
+									<h4 class="to-animate">Easily deploy and share your forecast web app inside your local area network</h4>
 								</div>
 						</div>
 							
