--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 						<div class="col-md-12 section-heading text-center">
 							<nobr>
 							<i class="section-heading text-center icon-cloud-download to-animate-2"></i>
-								<div class="fh5co-post to-animate">
-									<h3><i class="section-heading text-center">ADAPT</i></h3>
+								<h3>ADAPT</h3>
 							</nobr>
-									<h4 class="to-animate">Upload your dataset directly on Rstudio to compare and suit models on your own regression task</h4>
-								</div>
+							<div class="fh5co-post to-animate">
+								<h4 class="to-animate">Upload your dataset directly on Rstudio to compare and suit models on your own regression task</h4>
+							</div>
 						</div>
 						<div class="col-md-12 section-heading text-center">
 							<i class="section-heading text-center icon-gear to-animate-2"></i>
