--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 
 <!DOCTYPE html>
+<style>
+p.small {
+  line-height: 0.7;
+}
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -96,16 +100,15 @@
 						</div>
 					</div>
 				</div>
-                                        
-						<div class="col-md-12 section-heading text-center">
-							<nobr>
+                                        <p class="small">
+						<div class="col-md-12 section-heading text-center">	
 							<i class="section-heading text-center icon-cloud-download to-animate-2"></i>
-								<h3>ADAPT</h3>
-							</nobr>
-							<div class="fh5co-post to-animate">
+							     <div class="fh5co-post to-animate">
+								<h3><i class="section-heading text-center">ADAPT</i></h3>
 								<h4 class="to-animate">Upload your dataset directly on Rstudio to compare and suit models on your own regression task</h4>
-							</div>
+							      </div>
 						</div>
+					</p>
 						<div class="col-md-12 section-heading text-center">
 							<i class="section-heading text-center icon-gear to-animate-2"></i>
 								<div class="fh5co-post to-animate">
