--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
 		<div class="fh5co-services">
 			<div class="container">
 				<div class="row">
-				<div class="row">
-  					<div class="column"></div>
-					yolo ma boy 1 
-  					<div class="column"></div>
-					yolo ma boy 2
-				</div>
+				<div class="container">
+   					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      				First Column 
+   				</div>
+   				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      				Second Column 
+   				</div>
+			<div>
 					<div class="col-md-12 section-heading text-center">
 						<h2 class="to-animate"><font color="#FFA500">The product</font></h2>
 						<div class="row">
