--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<br />
    				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       					<div class="row">	
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/_ekZcy84H0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/_ekZcy84H0o" style="float:right;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		
 					
 						</div>
 					</div> 
