--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<br />
 				<br />
    				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      					<div class="row">	
+      					<div align="center">	
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/_ekZcy84H0o" style="float:center;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		
 					
 						</div>
