--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			
 						</div>
 						</div>
-				
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 						<div class="col-md-12 section-heading text-center">	
 							<i class="section-heading text-center icon-cloud-download to-animate-2"></i>
 							     <div class="fh5co-post to-animate">
@@ -117,6 +117,8 @@
 									<h4 class="to-animate">Implement and compare different machine learning regression techniques  using just one line of code</h4>
 								</div>
 						</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 						<div class="col-md-12 section-heading text-center">
 							<i class="section-heading text-center icon-laptop to-animate-2"></i>
 								<div class="fh5co-post to-animate">
@@ -131,6 +133,7 @@
 									<h4 class="to-animate">Easily deploy and share your forecast web app inside your local area network</h4>
 								</div>
 						</div> 
+					</div>
    				</div>
 				<br />
 				<br />
