--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<div class="container">
 				<div class="row">
 				<div class="container">
-   					<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+   					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       						<div class="col-md-12 section-heading text-center">
 							<h2 class="to-animate"><font color="#FFA500">The product</font></h2>
 						<div class="row">
@@ -101,7 +101,7 @@
 			
 						</div>
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 						<div class="col-md-12 section-heading text-center">	
 							<i class="section-heading text-center icon-cloud-download to-animate-2"></i>
 							     <div class="fh5co-post to-animate">
@@ -109,7 +109,7 @@
 								<h4 class="to-animate">Upload your dataset directly on Rstudio to compare and suit models on your own regression task</h4>
 							      </div>
 						</div>
-					
+						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 						<div class="col-md-12 section-heading text-center">
 							<i class="section-heading text-center icon-gear to-animate-2"></i>
 								<div class="fh5co-post to-animate">
@@ -118,7 +118,8 @@
 								</div>
 						</div>
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 						<div class="col-md-12 section-heading text-center">
 							<i class="section-heading text-center icon-laptop to-animate-2"></i>
 								<div class="fh5co-post to-animate">
@@ -126,22 +127,18 @@
 									<h4 class="to-animate">Whether you are on Windows, Linux or Mac distribution, you can install shinyML package for free from any device using Rstudio IDE</h4>
 								</div>
 						</div>
+						<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 						<div class="col-md-12 section-heading text-center">
 							<i class="section-heading text-center icon-columns to-animate-2"></i>
 								<div class="fh5co-post to-animate">
 									<h3><i class="section-heading text-center">DEPLOY</i></h3>
 									<h4 class="to-animate">Easily deploy and share your forecast web app inside your local area network</h4>
 								</div>
+							</div>
 						</div> 
 					</div>
    				</div>
-				<br />
-				<br />
-				<br />
-				<br />
-				<br />
-				<br />
-   				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+   				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       					<div align="center">	
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/_ekZcy84H0o" style="float:center;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		
 					
