--- a/index.html
+++ b/index.html
@@ -154,7 +154,12 @@
 	<section id="fh5co-explore" data-section="explore">
 		<div class="fh5co-explore">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h2 class="to-animate"><font color="#FFA500">The demo</font></h2>
+				<div class="col-md-12 section-heading text-center">
+					<h2 class="to-animate"><font color="#FFA500">The demo</font></h2>
+					<div class="row">
+						<h3 class="to-animate">Implement and compare your favorite supervised machine learning models in less than two minutes...</h3>
+					</div>
+				</div>
       				<div align="center">	
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/_ekZcy84H0o" style="float:center;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		
 					
