--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 section-heading text-center">
-						<h2 class="to-animate">Plans Built For Every One</h2>
+						<h2 class="to-animate">Not even a cent to pay ! </h2>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove. </h3>
+								<h3 class="to-animate">Like any official R open source package (GPL-3 license), shinyML is completely free to use. So don't hesitate to use it without any restriction. </h3>
 							</div>
 						</div>
 					</div>
@@ -192,66 +192,20 @@
 				<div class="row">
 					<div class="col-md-3 col-sm-6">
 						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Starter</h2>
-							<div class="price"><sup class="currency">$</sup>7<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
+							<h2 class="pricing-plan">Free</h2>
+							<div class="price"><sup class="currency">$</sup>0<small></small></div>
+							<p>Every one can use shinyML open source R package for free ! </p>
 							<hr>
 							<ul class="pricing-info">
-								<li>10 projects</li>
-								<li>20 Pages</li>
-								<li>20 Emails</li>
-								<li>100 Images</li>
+								<li>Free to download</li>
+								<li>Unlimited regression tasks</li>
+								<li>Unlimited Shiny apps building</li>
 							</ul>
-							<p><a href="#" class="btn btn-primary">Read More</a></p>
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-6">
-						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Regular</h2>
-							<div class="price"><sup class="currency">$</sup>19<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>15 projects</li>
-								<li>40 Pages</li>
-								<li>40 Emails</li>
-								<li>200 Images</li>
-							</ul>
-							<p><a href="#" class="btn btn-primary">Read More</a></p>
-						</div>
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-md-3 col-sm-6 to-animate">
-						<div class="price-box popular">
-							<div class="popular-text">Best value</div>
-							<h2 class="pricing-plan">Plus</h2>
-							<div class="price"><sup class="currency">$</sup>79<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>Unlimitted projects</li>
-								<li>100 Pages</li>
-								<li>100 Emails</li>
-								<li>700 Images</li>
-							</ul>
-							<p><a href="#" class="btn btn-primary">Read More</a></p>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Enterprise</h2>
-							<div class="price"><sup class="currency">$</sup>125<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>Unlimitted projects</li>
-								<li>Unlimitted Pages</li>
-								<li>Unlimitted Emails</li>
-								<li>Unlimitted Images</li>
-							</ul>
-							<p><a href="#" class="btn btn-primary">Read More</a></p>
-						</div>
-					</div>
+	
+		
+
 				</div>
 
 				<div class="row">
