--- a/index.html
+++ b/index.html
@@ -208,13 +208,6 @@
 
 				</div>
 
-				<div class="row">
-					<div class="col-md-6 col-md-offset-3 col-md-push-3 to-animate">
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-					</div>
-				</div>
-
 			</div>
 		</div>
 	</section>	
@@ -236,7 +229,7 @@
 					<div class="center">
 						<div class="section-heading text-center">
 							<div class="team-box text-center to-animate-2">
-								<div class="user"><img class="img-reponsive" src="images/profile_pict.png" width="10" height="300" alt="Jean BERTIN"></div>
+								<div class="user"><img class="img-reponsive" src="images/profile_pict.png" alt="Jean BERTIN"></div>
 								<h3>Jean BERTIN</h3>
 								<span class="position">Data Scientist</span>
 								<p>Particularly interested in machine learning regression techniques on time series.Graduated from Arts et Métiers ParisTech (2016) and Mines ParisTech (OSE 2017). </p>
