--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
 						<h2 class="to-animate">Not even a cent to pay ! </h2>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">Like any official R open source package (GPL-3 license), shinyML is completely free to use. So don't hesitate to use it without any restriction. </h3>
+								<h3 class="to-animate">Like any official R open source package (GPL-3 license), shinyML is completely free to use. Feel free to use it without any restriction. </h3>
 							</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="row">
-					<div class="col-md-3 col-sm-6">
+					<div class="col-md-4 col-sm-4" align = "center">
 						<div class="price-box to-animate">
 							<h2 class="pricing-plan">Free</h2>
 							<div class="price"><sup class="currency">$</sup>0<small></small></div>
