--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 				</div>
 
 				<div class="row">
-					<div class="col-md-4 col-sm-4" align = "center">
+					<div class="col-md-4 col-sm-4 col-sm-offset-4">
 						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Free</h2>
+							<h2 class="pricing-plan"><font color="#FFA500">Free</font></h2>
 							<div class="price"><sup class="currency">$</sup>0<small></small></div>
 							<p>Every one can use shinyML open source R package for free ! </p>
 							<hr>
