--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
 				<div class="row">
 					<div class="col-md-4 col-sm-4 col-sm-offset-4">
 						<div class="price-box to-animate">
-							<h2 class="pricing-plan"><font color="#FFA500">Free</font></h2>
-							<div class="price"><sup class="currency">$</sup>0<small></small></div>
+							<h2 class="pricing-plan">Free</h2>
+							<div class="price"><sup class="currency"><font color="#FFA500">$</sup>0</font><small></small></div>
 							<p>Every one can use shinyML open source R package for free ! </p>
 							<hr>
 							<ul class="pricing-info">
