--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
 				<div class="row">
 					<div class="col-md-4 col-sm-4 col-sm-offset-4">
 						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Free</h2>
-							<div class="price"><sup class="currency"><font color="#FFA500">$</sup>0</font><small></small></div>
+							<h2 class="pricing-plan"><font color="#FFA500">Free</font></h2>
+							<div class="price"><sup class="currency">$</sup>0<small></small></div>
 							<p>Every one can use shinyML open source R package for free ! </p>
 							<hr>
 							<ul class="pricing-info">
@@ -229,14 +229,16 @@
 					<div class="center">
 						<div class="section-heading text-center">
 							<div class="team-box text-center to-animate-2">
-								<div class="user"><img class="img-reponsive" src="images/profile_pict.png" alt="Jean BERTIN"></div>
-								<h3>Jean BERTIN</h3>
+								<div class="col-md-6 col-md-offset-3 subtext">
+									<div class="user"><img class="img-reponsive" src="images/profile_pict.png" alt="Jean BERTIN"></div>
+									<h3>Jean BERTIN</h3>
 								<span class="position">Data Scientist</span>
 								<p>Particularly interested in machine learning regression techniques on time series.Graduated from Arts et Métiers ParisTech (2016) and Mines ParisTech (OSE 2017). </p>
 								<ul class="social-media">
 									<li><a href="https://www.linkedin.com/in/jean-bertin-0b156985/" class="linkedin"><i class="icon-linkedin"></i></a></li>
 									<li><a href="https://github.com/JeanBertinR" class="github"><i class="icon-github-alt"></i></a></li>
 								</ul>
+								</div>
 							</div>
 						</div>
 					</div>
