--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
 								<img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
 							</a>
 						<div class="col-md-12 text-center">
+							<div class="user"><img class="img-reponsive" src="images/logo_shinyML.png"></div>
+							<br>
 							<h1 class="to-animate">shiny<font color="#FFA500">ML</font></h1>
-							<div class="user"><img class="img-reponsive" src="images/logo_shinyML.png" alt="Jean BERTIN"></div>
 							<h2 class="to-animate"> An intuitive platform to compare supervised regression models</h2>
 						<p></a> <a href="https://www.gnu.org/licenses/gpl-3.0"><img src="https://img.shields.io/badge/License-GPL%20v3-red.svg" alt="License: GPL v3"></a> <a href="https://cran.r-project.org/package=shinyML"><img src="http://www.r-pkg.org/badges/version/shinyML" alt="CRAN_Status_Badge"></a><a href="http://cran.rstudio.com/web/packages/shinyML/index.html"><img src="http://cranlogs.r-pkg.org/badges/shinyML" alt="downloads"></a></p>
 						<p><a href="https://travis-ci.org/JeanBertinR/shinyML"><img src="https://travis-ci.org/JeanBertinR/shinyML.svg?branch=master" alt="Linux/OSX Build Status"></a> <a href="https://ci.appveyor.com/project/JeanBertinR/shinyML/branch/develop"><img src="https://ci.appveyor.com/api/projects/status/6g6kp8onpb26jhnm/branch/develop?svg=true" alt="Windows Build status"></a></p>
