--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						</div>
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 						<div class="col-md-12 section-heading text-center">	
-							<i class="section-heading text-center icon-cloud-download to-animate-2-10x"></i>
+							<i class="section-heading text-center icon-cloud-download to-animate-2 style="font-size: 0.73em;"></i>
 							     <div class="fh5co-post to-animate">
 								<h3><i class="section-heading text-center">ADAPT</i></h3>
 								<h4 class="to-animate">Upload your dataset directly on Rstudio to compare and suit models on your own regression task</h4>
