--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	  </div>
 	</header>
 
-	<section id="fh5co-home" data-section="home" style="background-image: url(images/full_image_1.jpg);" data-stellar-background-ratio="0.5">
+	<section id="fh5co-home" data-section="home">
 		<div class="gradient"></div>
 		<div class="container">
 			<div class="text-wrap">
