--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 									<div class="user"><img class="img-reponsive" src="images/profile_pict.png" alt="Jean BERTIN"></div>
 									<h3>Jean BERTIN</h3>
 								<span class="position">Data Scientist</span>
-								<p>Particularly interested in machine learning regression techniques on time series.Graduated from Arts et Métiers ParisTech (2016) and Mines ParisTech (OSE 2017). </p>
+								<p>Interested to conciliate machine learning techniques and data visualisation tools. Graduated from Arts et Métiers ParisTech (2016) and Mines ParisTech (OSE 2017). </p>
 								<ul class="social-media">
 									<li><a href="https://www.linkedin.com/in/jean-bertin-0b156985/" class="linkedin"><i class="icon-linkedin"></i></a></li>
 									<li><a href="https://github.com/JeanBertinR" class="github"><i class="icon-github-alt"></i></a></li>
